--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ clap = { version = "4.5.39", features = ["derive", "env", "wrap_help"] }
 color-eyre = "0.6.4"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
+regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 ureq = { version = "3.0.11", features = ["json"] }
