--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clap = { version = "4.5.39", features = ["derive", "env", "wrap_help"] }
 color-eyre = "0.6.4"
 crossterm = "0.29.0"
+fastrand = "2.3.0"
 ratatui = "0.29.0"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
