--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,206 @@ name = "randy-ng"
 version = "0.1.0"
 edition = "2021"
 
+[lints.rust]
+absolute_paths_not_starting_with_crate = "deny"
+ambiguous_negative_literals = "deny"
+deprecated_safe = "deny"
+macro_use_extern_crate = "deny"
+missing_docs = "deny"
+non_ascii_idents = "deny"
+redundant_imports = "deny"
+redundant_lifetimes = "deny"
+rust_2024_incompatible_pat = "deny"
+trivial_casts = "deny"
+trivial_numeric_casts = "deny"
+unit_bindings = "deny"
+unnameable_types = "deny"
+unreachable_pub = "deny"
+unsafe_code = "deny"
+unused_crate_dependencies = "deny"
+unused_import_braces = "deny"
+unused_lifetimes = "deny"
+unused_results = "deny"
+
+[lints.clippy]
+allow_attributes = "deny"
+allow_attributes_without_reason = "deny"
+arbitrary_source_item_ordering = "deny"
+as_underscore = "deny"
+assigning_clones = "deny"
+bool_to_int_with_if = "deny"
+branches_sharing_code = "deny"
+cargo_common_metadata = "deny"
+cast_lossless = "deny"
+cast_possible_truncation = "deny"
+cast_possible_wrap = "deny"
+cast_sign_loss = "deny"
+cfg_not_test = "deny"
+checked_conversions = "deny"
+clear_with_drain = "deny"
+clone_on_ref_ptr = "deny"
+cloned_instead_of_copied = "deny"
+cognitive_complexity = "deny"
+collection_is_never_read = "deny"
+comparison_chain = "deny"
+debug_assert_with_mut_call = "deny"
+default_trait_access = "deny"
+derive_partial_eq_without_eq = "deny"
+disallowed_script_idents = "deny"
+doc_link_with_quotes = "deny"
+empty_enum = "deny"
+empty_structs_with_brackets = "deny"
+enum_glob_use = "deny"
+equatable_if_let = "deny"
+error_impl_error = "deny"
+exit = "deny"
+expl_impl_clone_on_copy = "deny"
+explicit_deref_methods = "deny"
+explicit_into_iter_loop = "deny"
+explicit_iter_loop = "deny"
+fallible_impl_from = "deny"
+field_scoped_visibility_modifiers = "deny"
+filetype_is_file = "deny"
+filter_map_next = "deny"
+flat_map_option = "deny"
+float_cmp = "deny"
+float_cmp_const = "deny"
+fn_params_excessive_bools = "deny"
+format_collect = "deny"
+format_push_string = "deny"
+get_unwrap = "deny"
+if_not_else = "deny"
+if_then_some_else_none = "deny"
+ignored_unit_patterns = "deny"
+impl_trait_in_params = "deny"
+implicit_clone = "deny"
+imprecise_flops = "deny"
+indexing_slicing = "deny"
+inefficient_to_string = "deny"
+into_iter_without_iter = "deny"
+invalid_upcast_comparisons = "deny"
+items_after_statements = "deny"
+iter_filter_is_ok = "deny"
+iter_filter_is_some = "deny"
+iter_not_returning_iterator = "deny"
+iter_over_hash_type = "deny"
+iter_without_into_iter = "deny"
+large_stack_arrays = "deny"
+large_stack_frames = "deny"
+let_underscore_must_use = "deny"
+linkedlist = "deny"
+lossy_float_literal = "deny"
+manual_assert = "deny"
+manual_instant_elapsed = "deny"
+manual_is_power_of_two = "deny"
+manual_is_variant_and = "deny"
+manual_let_else = "deny"
+manual_string_new = "deny"
+many_single_char_names = "deny"
+map_err_ignore = "deny"
+map_unwrap_or = "deny"
+match_bool = "deny"
+match_wild_err_arm = "deny"
+min_ident_chars = "deny"
+mismatching_type_param_order = "deny"
+missing_assert_message = "deny"
+missing_asserts_for_indexing = "deny"
+missing_const_for_fn = "deny"
+missing_docs_in_private_items = "deny"
+missing_errors_doc = "deny"
+missing_fields_in_debug = "deny"
+missing_panics_doc = "deny"
+mod_module_files = "deny"
+module_name_repetitions = "deny"
+multiple_inherent_impl = "deny"
+mut_mut = "deny"
+needless_bitwise_bool = "deny"
+needless_collect = "deny"
+needless_continue = "deny"
+needless_for_each = "deny"
+needless_pass_by_ref_mut = "deny"
+needless_raw_string_hashes = "deny"
+needless_raw_strings = "deny"
+negative_feature_names = "deny"
+no_effect_underscore_binding = "deny"
+non_ascii_literal = "deny"
+nonstandard_macro_braces = "deny"
+option_as_ref_cloned = "deny"
+option_option = "deny"
+or_fun_call = "deny"
+panic_in_result_fn = "deny"
+partial_pub_fields = "deny"
+pathbuf_init_then_push = "deny"
+# pattern_type_mismatch = "deny"
+pub_underscore_fields = "deny"
+pub_without_shorthand = "deny"
+range_minus_one = "deny"
+range_plus_one = "deny"
+rc_buffer = "deny"
+redundant_clone = "deny"
+redundant_closure_for_method_calls = "deny"
+redundant_else = "deny"
+redundant_feature_names = "deny"
+redundant_type_annotations = "deny"
+ref_binding_to_reference = "deny"
+ref_option = "deny"
+renamed_function_params = "deny"
+rest_pat_in_fully_bound_structs = "deny"
+return_self_not_must_use = "deny"
+same_functions_in_if_condition = "deny"
+semicolon_if_nothing_returned = "deny"
+semicolon_outside_block = "deny"
+set_contains_or_insert = "deny"
+should_panic_without_expect = "deny"
+similar_names = "deny"
+single_char_lifetime_names = "deny"
+single_char_pattern = "deny"
+single_match_else = "deny"
+stable_sort_primitive = "deny"
+str_to_string = "deny"
+string_add = "deny"
+string_add_assign = "deny"
+string_lit_as_bytes = "deny"
+string_to_string = "deny"
+struct_excessive_bools = "deny"
+struct_field_names = "deny"
+suboptimal_flops = "deny"
+tests_outside_test_module = "deny"
+too_long_first_doc_paragraph = "deny"
+too_many_lines = "deny"
+trait_duplication_in_bounds = "deny"
+trivial_regex = "deny"
+trivially_copy_pass_by_ref = "deny"
+try_err = "deny"
+tuple_array_conversions = "deny"
+type_repetition_in_bounds = "deny"
+unchecked_duration_subtraction = "deny"
+unnecessary_box_returns = "deny"
+unnecessary_join = "deny"
+unnecessary_literal_bound = "deny"
+unneeded_field_pattern = "deny"
+unnested_or_patterns = "deny"
+unseparated_literal_suffix = "deny"
+unused_peekable = "deny"
+unused_rounding = "deny"
+unused_self = "deny"
+unused_trait_names = "deny"
+unwrap_in_result = "deny"
+unwrap_used = "deny"
+use_self = "deny"
+used_underscore_binding = "deny"
+used_underscore_items = "deny"
+useless_let_if_seq = "deny"
+verbose_file_reads = "deny"
+wildcard_dependencies = "deny"
+wildcard_imports = "deny"
+zero_sized_map_values = "deny"
+
 [dependencies]
 clap = { version = "4.5.39", features = ["derive", "env", "wrap_help"] }
 color-eyre = "0.6.4"
-crossterm = "0.29.0"
 fastrand = "2.3.0"
 ratatui = "0.29.0"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
 ureq = { version = "3.0.11", features = ["json"] }
