--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ explicit_deref_methods = "deny"
 explicit_into_iter_loop = "deny"
 explicit_iter_loop = "deny"
 fallible_impl_from = "deny"
-field_scoped_visibility_modifiers = "deny"
+# field_scoped_visibility_modifiers = "deny"
 filetype_is_file = "deny"
 filter_map_next = "deny"
 flat_map_option = "deny"
@@ -133,7 +133,6 @@ or_fun_call = "deny"
 panic_in_result_fn = "deny"
 partial_pub_fields = "deny"
 pathbuf_init_then_push = "deny"
-# pattern_type_mismatch = "deny"
 pub_underscore_fields = "deny"
 pub_without_shorthand = "deny"
 range_minus_one = "deny"
