Refactor model fetching logic and add CLI model validation
- Move model fetching to utils and return Result
- Add value parser to validate CLI model input against available models
- Update App to use new fetch_models function and handle errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "randy-ng"
 version = "0.1.0"
 edition = "2021"
+description = "A new-gen randy; a game to guess numbers and get answered by a cowboy."
 
 [lints.rust]
 absolute_paths_not_starting_with_crate = "deny"
