Add license, readme, and metadata for crates.io publishing
Includes LICENSE and README.md files, and updates Cargo.toml with
license, repository, keywords, and categories. Removes temporary
clippy::cargo_common_metadata allow.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "randy-ng"
 version = "0.1.0"
 edition = "2021"
 description = "A new-gen randy; a game to guess numbers and get answered by a cowboy."
+license = "Unlicense"
+readme = "README.md"
+repository = "https://github.com/dybucc/randy-ng"
+keywords = ["game", "guessing", "numbers", "cowboy", "ai"]
+categories = ["command-line-utilities", "games"]
 
 [lints.rust]
 absolute_paths_not_starting_with_crate = "deny"
