Add rustdoc lints and update README formatting
Enable strict rustdoc lints in Cargo.toml and improve README with
centered title. Remove temporary clippy lint allowance from lib.rs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,10 +30,21 @@ unused_import_braces = "deny"
 unused_lifetimes = "deny"
 unused_results = "deny"
 
+[lints.rustdoc]
+broken_intra_doc_links = "deny"
+private_intra_doc_links = "deny"
+missing_crate_level_docs = "deny"
+private_doc_tests = "deny"
+invalid_codeblock_attributes = "deny"
+invalid_html_tags = "deny"
+invalid_rust_codeblocks = "deny"
+bare_urls = "deny"
+redundant_explicit_links = "deny"
+
 [lints.clippy]
 allow_attributes = "deny"
 allow_attributes_without_reason = "deny"
-arbitrary_source_item_ordering = "deny"
+# arbitrary_source_item_ordering = "deny"
 as_underscore = "deny"
 assigning_clones = "deny"
 bool_to_int_with_if = "deny"
@@ -67,7 +78,6 @@ explicit_deref_methods = "deny"
 explicit_into_iter_loop = "deny"
 explicit_iter_loop = "deny"
 fallible_impl_from = "deny"
-# field_scoped_visibility_modifiers = "deny"
 filetype_is_file = "deny"
 filter_map_next = "deny"
 flat_map_option = "deny"
